src/main/java/by/aliana/lang/antlr/assParser.java
// Generated from /home/diana/IdeaProjects/BigAssLang/src/main/java/by/aliana/lang/antlr/ass.g4 by ANTLR 4.9.1
package by.aliana.lang.antlr;
import by.aliana.lang.exception.CustomException;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class assParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, BOOL=3, ASSIGN=4, PLUS=5, MULTIPLICATION=6, DIVISION=7, 
		MINUS=8, POINT=9, COMMA=10, LEFT_SQUARE_BRACKET=11, RIGHT_SQUARE_BRACKET=12, 
		LEFT_ROUND_BRACKET=13, RIGHT_ROUND_BRACKET=14, LEFT_CURVY_BRACKET=15, 
		RIGHT_CURVY_BRACKET=16, DOLLAR_SIGN=17, FUNKK=18, DROP=19, LOWERCASE=20, 
		UPPERCASE=21, ZERO=22, NATURAL=23, DIGIT=24, WS=25, NEWLINE=26, AYE=27, 
		GTFO=28, IF=29, ELSE=30, EQUAL=31, GREATER=32, LESS=33, GREATER_OR_EQUAL=34, 
		LESS_OR_EQUAL=35, NOT_EQUAL=36, LOGICAL_AND=37, LOGICAL_OR=38, INVERSION=39;
	public static final int
		RULE_prog = 0, RULE_type = 1, RULE_arrayType = 2, RULE_genericType = 3, 
		RULE_varName = 4, RULE_literal = 5, RULE_digitLiteral = 6, RULE_intValue = 7, 
		RULE_unsignedIntValue = 8, RULE_floatValue = 9, RULE_boolValue = 10, RULE_getElement = 11, 
		RULE_arrayElementValue = 12, RULE_array = 13, RULE_declare = 14, RULE_varAssignment = 15, 
		RULE_declarationAssignment = 16, RULE_arrayElementAssignment = 17, RULE_varAssignmentToArray = 18, 
		RULE_declarationAssignmentToArray = 19, RULE_arrayElementAssignmentToArray = 20, 
		RULE_assign = 21, RULE_castExpression = 22, RULE_varCast = 23, RULE_declarationCast = 24, 
		RULE_arrayElementCast = 25, RULE_cast = 26, RULE_statement = 27, RULE_bodyContent = 28, 
		RULE_signature = 29, RULE_attribute = 30, RULE_drop = 31, RULE_func = 32, 
		RULE_funcCallAttribute = 33, RULE_funcCall = 34, RULE_arithmeticUnit = 35, 
		RULE_unaryMinusUnit = 36, RULE_expression = 37, RULE_ifBlock = 38, RULE_elifBlock = 39, 
		RULE_elseBlock = 40, RULE_ifClause = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "type", "arrayType", "genericType", "varName", "literal", "digitLiteral", 
			"intValue", "unsignedIntValue", "floatValue", "boolValue", "getElement", 
			"arrayElementValue", "array", "declare", "varAssignment", "declarationAssignment", 
			"arrayElementAssignment", "varAssignmentToArray", "declarationAssignmentToArray", 
			"arrayElementAssignmentToArray", "assign", "castExpression", "varCast", 
			"declarationCast", "arrayElementCast", "cast", "statement", "bodyContent", 
			"signature", "attribute", "drop", "func", "funcCallAttribute", "funcCall", 
			"arithmeticUnit", "unaryMinusUnit", "expression", "ifBlock", "elifBlock", 
			"elseBlock", "ifClause"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INT'", "'FLOAT'", "'BOOL'", "'='", "'+'", "'*'", "'/'", "'-'", 
			"'.'", "','", "'['", "']'", "'('", "')'", "'{'", "'}'", "'$'", "'FUNKK'", 
			"'DROP'", null, null, "'0'", null, null, null, null, "'AYE'", "'GTFO'", 
			"'IF'", "'ELSE'", "'=='", "'>'", "'<'", "'>='", "'<='", "'!='", "'&&'", 
			"'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "FLOAT", "BOOL", "ASSIGN", "PLUS", "MULTIPLICATION", "DIVISION", 
			"MINUS", "POINT", "COMMA", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
			"LEFT_ROUND_BRACKET", "RIGHT_ROUND_BRACKET", "LEFT_CURVY_BRACKET", "RIGHT_CURVY_BRACKET", 
			"DOLLAR_SIGN", "FUNKK", "DROP", "LOWERCASE", "UPPERCASE", "ZERO", "NATURAL", 
			"DIGIT", "WS", "NEWLINE", "AYE", "GTFO", "IF", "ELSE", "EQUAL", "GREATER", 
			"LESS", "GREATER_OR_EQUAL", "LESS_OR_EQUAL", "NOT_EQUAL", "LOGICAL_AND", 
			"LOGICAL_OR", "INVERSION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ass.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public assParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(assParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(assParser.NEWLINE, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) {
				return ((assVisitor<? extends T>)visitor).visitProg(this);
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				func();
				setState(85);
				match(NEWLINE);
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNKK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(assParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(assParser.FLOAT, 0); }
		public TerminalNode BOOL() { return getToken(assParser.BOOL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(assParser.LEFT_SQUARE_BRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(assParser.RIGHT_SQUARE_BRACKET, 0); }
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(LEFT_SQUARE_BRACKET);
			setState(94);
			type();
			setState(95);
			match(RIGHT_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenericTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public GenericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitGenericType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenericTypeContext genericType() throws RecognitionException {
		GenericTypeContext _localctx = new GenericTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_genericType);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				type();
				}
				break;
			case LEFT_SQUARE_BRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public List<TerminalNode> LOWERCASE() { return getTokens(assParser.LOWERCASE); }
		public TerminalNode LOWERCASE(int i) {
			return getToken(assParser.LOWERCASE, i);
		}
		public List<TerminalNode> UPPERCASE() { return getTokens(assParser.UPPERCASE); }
		public TerminalNode UPPERCASE(int i) {
			return getToken(assParser.UPPERCASE, i);
		}
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(LOWERCASE);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOWERCASE) | (1L << UPPERCASE) | (1L << ZERO) | (1L << NATURAL))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public IntValueContext intValue() {
			return getRuleContext(IntValueContext.class,0);
		}
		public FloatValueContext floatValue() {
			return getRuleContext(FloatValueContext.class,0);
		}
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_literal);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				intValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				floatValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				boolValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DigitLiteralContext extends ParserRuleContext {
		public IntValueContext intValue() {
			return getRuleContext(IntValueContext.class,0);
		}
		public FloatValueContext floatValue() {
			return getRuleContext(FloatValueContext.class,0);
		}
		public DigitLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digitLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitDigitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DigitLiteralContext digitLiteral() throws RecognitionException {
		DigitLiteralContext _localctx = new DigitLiteralContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_digitLiteral);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				intValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				floatValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntValueContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public TerminalNode MINUS() { return getToken(assParser.MINUS, 0); }
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public IntValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitIntValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntValueContext intValue() throws RecognitionException {
		IntValueContext _localctx = new IntValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_intValue);
		int _la;
		try {
			int _alt;
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(ZERO);
				}
				break;
			case MINUS:
			case NATURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(118);
					match(MINUS);
					}
				}

				setState(122); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(121);
						match(NATURAL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(124); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(126);
						_la = _input.LA(1);
						if ( !(_la==ZERO || _la==NATURAL) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(131);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsignedIntValueContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public UnsignedIntValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsignedIntValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitUnsignedIntValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnsignedIntValueContext unsignedIntValue() throws RecognitionException {
		UnsignedIntValueContext _localctx = new UnsignedIntValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unsignedIntValue);
		int _la;
		try {
			int _alt;
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(ZERO);
				}
				break;
			case NATURAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(136); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(135);
						match(NATURAL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(138); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ZERO || _la==NATURAL) {
					{
					{
					setState(140);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(145);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatValueContext extends ParserRuleContext {
		public TerminalNode POINT() { return getToken(assParser.POINT, 0); }
		public List<TerminalNode> ZERO() { return getTokens(assParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(assParser.ZERO, i);
		}
		public List<TerminalNode> NATURAL() { return getTokens(assParser.NATURAL); }
		public TerminalNode NATURAL(int i) {
			return getToken(assParser.NATURAL, i);
		}
		public TerminalNode MINUS() { return getToken(assParser.MINUS, 0); }
		public FloatValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitFloatValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FloatValueContext floatValue() throws RecognitionException {
		FloatValueContext _localctx = new FloatValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_floatValue);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(148);
				match(MINUS);
				}
			}

			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				{
				setState(151);
				match(ZERO);
				}
				break;
			case NATURAL:
				{
				setState(152);
				match(NATURAL);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ZERO || _la==NATURAL) {
					{
					{
					setState(153);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(161);
			match(POINT);
			setState(163); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(162);
					_la = _input.LA(1);
					if ( !(_la==ZERO || _la==NATURAL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(165); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolValueContext extends ParserRuleContext {
		public TerminalNode AYE() { return getToken(assParser.AYE, 0); }
		public TerminalNode GTFO() { return getToken(assParser.GTFO, 0); }
		public BoolValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof assVisitor ) return ((assVisitor<? extends T>)visitor).visitBoolValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolValueContext boolValue() throws RecognitionException {
		BoolValueContext _localctx = new BoolValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_boolValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_la = _input.LA(1);
			if ( !(_la==AYE || _la==GTFO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
